ProfileBar: attribute is 'paypal_subscr_id'.

--- a/r2/r2/templates/profilebar.html
+++ b/r2/r2/templates/profilebar.html
@@ -133,7 +133,7 @@
               ${_("Recurring Paypal subscription")}
             </a>
             &#32;
-            ${thing.gold_subscr_id}
+            ${thing.paypal_subscr_id}
           </div>
         %endif
 
