--- a/r2/r2/templates/innertoolbarframe.html
+++ b/r2/r2/templates/innertoolbarframe.html
@@ -37,6 +37,6 @@
   </head>
   <body class="${'expanded' if thing.expanded else ''}" id="inner_toolbar" onload="window.frames[1].focus()">
     <iframe frameborder="0" src="${add_sr('/toolbar/comments/'+thing.link._id36)}" id="reddit_panel" name="reddit_panel"></iframe>
-    <iframe frameborder="0" src="${thing.link.url}" id="reddit_link" name="reddit_link" sandbox="allow-scripts allow-forms"></iframe>
+    <iframe frameborder="0" src="${thing.url}" id="reddit_link" name="reddit_link" sandbox="allow-scripts allow-forms"></iframe>
   </body>
 </html>
