Add geotargeting for selfserve advertising.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -4656,6 +4656,7 @@ ul.tabmenu.formtab {
     text-align: center;
     border: 1px solid #369;
     padding: 5px;
+    max-width: 120px;
 }
 .existing-campaigns > table > tbody > tr#edit-campaign-tr > td { 
     text-align: left;
@@ -4734,6 +4735,12 @@ ul.tabmenu.formtab {
 #campaign label,
 #campaign li {
     font-size: small;
+}
+
+#campaign .geotarget-select {
+    float: left;
+    clear: left;
+    margin-top: 2px;
 }
 
 /***traffic stuff***/
