--- a/r2/r2/templates/subscribebutton.html
+++ b/r2/r2/templates/subscribebutton.html
@@ -32,5 +32,5 @@ ${toggle_button(
     alt_css_class="remove",
     reverse=thing.sr.subscriber,
     login_required=True,
-    data_attrs=dict(sr_name=thing.sr.name),
+    data_attrs=thing.data_attrs,
 )}
