Fix font size in explore taglines.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1084,12 +1084,10 @@ body.with-listing-chooser.explore-page #header .pagename {
     .link {
         .title {
             font-size: small;
+            padding-bottom: 2px;
         }
         .domain {
             font-size: x-small;
-        }
-        .tagline, .buttons {
-            font-size: smaller;
         }
     }
 
@@ -1149,7 +1147,6 @@ body.with-listing-chooser.explore-page #header .pagename {
     .comment-link {
         color: #888;
         display: inline-block;
-        font-size: 0.8em;
         font-weight: bold;
         padding: 0 0 8px 5px;
     }
