RenderableCampaign: Fix freebie logic.
Don't let users change the bid of a freebie'd campaign and
make sure to show the "freebie" span.

--- a/r2/r2/templates/renderablecampaign.html
+++ b/r2/r2/templates/renderablecampaign.html
@@ -77,11 +77,13 @@
             ${_("pay")}
           </button>
         %endif
-      %elif not (thing.is_complete or thing.is_live):
+      %elif not thing.free and not (thing.is_complete or thing.is_live):
         <button class="pay fancybutton" onclick="$.redirect('${thing.pay_url}')">
           ${_("change")}
         </button>
-      %elif thing.free:
+      %endif
+
+      %if thing.free:
         <span class='info'>${_("freebie")}</span>
       %endif
     %endif
