Don't fade comments in RES nightmode.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1105,6 +1105,10 @@ body.with-listing-chooser.explore-page #header .pagename {
     }
 }
 
+.explore-page.res-nightmode .comment-fade {
+    display: none;
+}
+
 .explore-hot .explore-label {
     background-color: #fff088;
     border: solid thin #c4b487;
