Links: allow re-queuing for scrape if unsuccessful
If the scrape of a link fails for some reason, this will add a "retry
thumb" button to the link, which will re-add it to the queue to try
again. This will appear to similar people as the "nsfw" button - either
mods of the subreddit, the submitter, or the sponsor for a promoted
link.

--- a/r2/r2/templates/printablebuttons.html
+++ b/r2/r2/templates/printablebuttons.html
@@ -71,6 +71,9 @@
       </form>
     </li>
   %endif
+  %if thing.show_rescrape:
+    <li>${ynbutton(_("retry thumb"), _("retrying"), "rescrape")}</li>
+  %endif
 </%def>
 
 <%def name="distinguish_setter(name, value=None)">
