Add username display to the reset password form.

--- a/r2/r2/templates/resetpassword.html
+++ b/r2/r2/templates/resetpassword.html
@@ -31,7 +31,7 @@ ${error_field("EXPIRED", 'p')}
 <form id="chpass" method="post" action="/api/resetpassword" 
       onsubmit="return post_form(this,'resetpassword')">
 
-  <h1>choose a new password</h1>
+  <h1>choose a new password for /u/${thing.username}</h1>
   <input type="hidden" name="key" value="${thing.key}"/>
 
   <div class="spacer">
