Use is_moderator_somewhere for moderatorship checks.
This should be a much lighter weight check than checking
reverse_moderator_ids on every request.

--- a/r2/r2/templates/redditheader.html
+++ b/r2/r2/templates/redditheader.html
@@ -97,7 +97,7 @@
                  title = mail_img_title, _sr_path = False,
                  _id = "mail", _class=mail_img_class)}
       ${separator("|")}
-      %if c.show_mod_mail:
+      %if c.user_is_loggedin and c.user.is_moderator_somewhere:
          <%
             if c.have_mod_messages:
               mail_img_class = 'havemail'
