--- a/r2/r2/templates/preffeeds.html
+++ b/r2/r2/templates/preffeeds.html
@@ -94,7 +94,7 @@ ${unsafe(safemarkdown(_("All feeds are invalidated if you change your password, 
       % endif
     </td>
    </tr>
-   %if c.show_mod_mail:
+   %if c.user.is_moderator_somewhere:
    <tr>
     <th>your moderator inbox</th>
     <td class="prefright">
