--- a/r2/r2/templates/filteredinfobar.html
+++ b/r2/r2/templates/filteredinfobar.html
@@ -16,34 +16,35 @@
 ## The Original Developer is the Initial Developer.  The Initial Developer of
 ## the Original Code is reddit Inc.
 ##
-## All portions of the code written by reddit are Copyright (c) 2006-2014
+## All portions of the code written by reddit are Copyright (c) 2006-2012
 ## reddit Inc. All Rights Reserved.
 ###############################################################################
 
-<%namespace file="utils.html" import="plain_link, classes, _md"/>
+<%namespace file="utils.html" import="plain_link, classes, md"/>
 
-<div ${classes("titlebox", "rounded", thing.css_class)}>
-  <h1 class="hover redditname special">
-    ${plain_link(thing.sr.name, thing.sr.path, _sr_path=False, _class="hover")}
+<div ${classes("titlebox", "rounded", "filtered-details", thing.css_class)}
+     data-path="${c.site.multi_path}">
+  <h1 class="hover redditname">
+    ${plain_link(c.site.name, c.site.path, _sr_path=False, _class="hover")}
   </h1>
 
   <div class="usertext">
-    ${_md(thing.description, wrap=True)}
+    ${md(_("Displaying content from %s, except the following subreddits: ") % c.site.unfiltered_path, wrap=True)}
   </div>
-</div>
 
-%if thing.allminus_url:
-  <div class="giftgold allminus-link">
-    <a href="${thing.allminus_url}">${_("Exclude your subscribed subreddits")}</a>
-  </div>
-%endif
+  <ul class="subreddits">
+  %for sr in c.site.exclude_srs:
+    <li data-name="${sr.name}">
+      <a href="/r/${sr.name}" data-name="${sr.name}">/r/${sr.name}</a>
+      <button class="remove-sr">${_('remove')}</button>
+    </li>
+  %endfor
+  </ul>
 
-<div class="giftgold allminus-link">
-    <a href="/me/f/all">${_("Exclude custom subreddits")}</a>
-</div>
+  <form class="add-sr">
+    <input type="text" class="sr-name" placeholder="${_('filter subreddit')}"><button class="add">${_('add')}</button>
+    <div class="error add-error"></div>
+  </form>
 
-%if not thing.gilding_listing:
-<div class="gilded-link">
-  <a href="/r/all/gilded">${_("See gilded comments and submissions")}</a>
+  ${plain_link(_('View unfiltered %s') % c.site.unfiltered_path, c.site.unfiltered_path, _sr_path=False, _class="unfilter")}
 </div>
-%endif
