--- a/r2/r2/templates/useriphistory.html
+++ b/r2/r2/templates/useriphistory.html
@@ -79,8 +79,8 @@
   <div id="account-activity-apps" class="instructions">
     <h1>${_("Apps you have authorized")}</h1>
     <p>${strings.account_activity_apps_blurb}</p>
-    %for app, scope, expiration in thing.my_apps:
-      ${authorized_app(app, scope, expiration)}
+    %for app_data in thing.my_apps.values():
+      ${authorized_app(app_data)}
     %endfor
   </div>
 %endif
