Explore page settings.
Adds checkboxes to control what kind of content appears in the explore tab.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -955,16 +955,29 @@ body.with-listing-chooser.explore-page #header .pagename {
 }
 
 .explore-header {
+    font-weight: bold; 
     margin-bottom: 7px;
     padding: 5px 0;
-    font-weight: bold;
-
-    .explore-title {
-      font-size: 1.3em;
-    }
+    
     .explore-discuss-link {
-      float: right;
-      margin: 0.3em 10px 0 0;
+        float: right;
+        margin: 0.3em 10px 0 0;
+    }
+    
+    #explore-settings {
+        input {
+            margin-left: 5px;
+        }
+        button {
+            color: #333;
+            font-weight: bold;
+            line-height: 10px;
+            margin-left: 8px;
+        }
+    }
+    
+    .explore-title {
+        font-size: 1.3em;
     }
 }
 
