/rules: Fix broken link for child pornography definition.

--- a/r2/r2/templates/rulespage.html
+++ b/r2/r2/templates/rulespage.html
@@ -92,7 +92,7 @@ function toggle_expando(elem){
         ${expando_end()}
       </li>
       <li id="minors">
-        <p>No&#32;<a href="http://www.missingkids.com/missingkids/servlet/PageServlet?PageId=1504" rel="nofollow">child pornography</a>&#32;or&#32;<a href="http://www.reddit.com/r/blog/comments/pmj7f/a_necessary_change_in_policy/" rel="nofollow">sexually suggestive content featuring minors</a>.</p>
+        <p>No&#32;<a href="http://www.missingkids.com/Exploitation/FAQ" rel="nofollow">child pornography</a>&#32;or&#32;<a href="http://www.reddit.com/r/blog/comments/pmj7f/a_necessary_change_in_policy/" rel="nofollow">sexually suggestive content featuring minors</a>.</p>
       </li>
       <li id="breakthesite">
         <p>Don't break the site or do anything that interferes with normal use of the site.</p>
