Be more explicity with merged OAuth2Scopes
In order to present a precise picture of an OAuth2Client's
overall permissions, a dictionary of OAuth2Scopes with
the exact, per-subreddit scopes is passed.

--- a/r2/r2/templates/prefapps.html
+++ b/r2/r2/templates/prefapps.html
@@ -252,7 +252,10 @@
         ${app_data['client'].name}
       %endif
       </h2>
-      ${scope_details(app_data['scope'], compact=True)}
+      ## `sorted` should put global permissions first (keyed off `None`)
+      %for sr in sorted(app_data['scopes']):
+        ${scope_details(app_data['scopes'][sr], compact=True)}<br>
+      %endfor
     </div>
     <div class="app-description">${app_data['client'].description}</div>
     ${developers(app_data['client'])}
